# rsclash

./: .clippy.toml  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  deny.toml  rustfmt.toml  taplo.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: quality.yml
apps/rsclash-desktop/: Cargo.toml
apps/rsclash-desktop/src/: fonts.rs  global_shortcuts.rs  linux_bootstrap.rs  logging.rs  main.rs  single_instance.rs  tray.rs
crates/rsclash-app/: Cargo.toml
crates/rsclash-app/src/: change.rs  lib.rs  mihomo.rs  profiles.rs  proxy_view.rs  runtime.rs  settings.rs  system_proxy.rs
crates/rsclash-config/: Cargo.toml
crates/rsclash-config/src/: defaults.rs  deployment.rs  error.rs  import.rs  lib.rs  model.rs  settings.rs  store.rs  transaction.rs
crates/rsclash-config/src/enhance/: field.rs  merge.rs  mod.rs  native.rs  pipeline.rs  script.rs  sequence.rs
crates/rsclash-config/tests/: golden_enhancement.rs  real_mihomo.rs
crates/rsclash-config/tests/fixtures/: minimal-runtime.yaml
crates/rsclash-config/tests/fixtures/golden/cvr-6219452/: application.yaml  current.yaml  dns.yaml  expected-cvr.yaml  global-merge.yaml  global-script.js  groups.yaml  profile-merge.yaml  profile-script.js  proxies.yaml  rules.yaml
crates/rsclash-core/: Cargo.toml
crates/rsclash-core/src/: lib.rs  linux.rs  preferred.rs
crates/rsclash-core/tests/: real_mihomo.rs
crates/rsclash-domain/: Cargo.toml
crates/rsclash-domain/src/: lib.rs
crates/rsclash-mihomo/: Cargo.toml
crates/rsclash-mihomo/src/: api.rs  client.rs  endpoint.rs  error.rs  fake.rs  lib.rs  models.rs  stream.rs
crates/rsclash-mihomo/tests/: model_fixtures.rs  real_mihomo.rs
crates/rsclash-mihomo/tests/fixtures/: connections.json  log.json  memory.json  proxies.json  traffic.json  version.json
crates/rsclash-platform/: Cargo.toml
crates/rsclash-platform/src/: lib.rs  linux_desktop.rs  linux_proxy.rs
crates/rsclash-service/: Cargo.toml
crates/rsclash-service/src/: config.rs  daemon.rs  install.rs  lib.rs  lifecycle.rs  server.rs  transport.rs
crates/rsclash-ui/: Cargo.toml
crates/rsclash-ui/src/: geometry.rs  lib.rs  theme.rs
docs/: parity-matrix.md
scripts/: check.sh  test-mihomo-integration.sh
