[workspace]
members = [
  "apps/rsclash-desktop",
  "crates/rsclash-app",
  "crates/rsclash-config",
  "crates/rsclash-domain",
  "crates/rsclash-mihomo",
  "crates/rsclash-ui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
publish = false

[workspace.dependencies]
async-trait = "0.1.89"
boa_engine = "0.21.1"
eframe = { version = "0.35.0", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "persistence",
  "wayland",
  "x11",
] }
egui = { version = "0.35.0", features = ["serde"] }
futures-util = "0.3.32"
ksni = { version = "0.3.6", default-features = false, features = ["async-io", "blocking"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.53.1", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["handshake"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"

rsclash-app = { path = "crates/rsclash-app" }
rsclash-config = { path = "crates/rsclash-config" }
rsclash-domain = { path = "crates/rsclash-domain" }
rsclash-mihomo = { path = "crates/rsclash-mihomo" }
rsclash-ui = { path = "crates/rsclash-ui" }

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
non_ascii_idents = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
allow_attributes_without_reason = "deny"
async_yields_async = "deny"
await_holding_lock = "deny"
branches_sharing_code = "deny"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
cognitive_complexity = "deny"
collection_is_never_read = "deny"
copy_iterator = "deny"
dbg_macro = "deny"
equatable_if_let = "deny"
expect_used = "deny"
expl_impl_clone_on_copy = "deny"
future_not_send = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
large_const_arrays = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
missing_const_for_fn = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_pass_by_ref_mut = "deny"
needless_raw_string_hashes = "deny"
option_as_ref_cloned = "deny"
or_fun_call = "deny"
panic = "deny"
pathbuf_init_then_push = "deny"
print_stderr = "deny"
print_stdout = "deny"
rc_clone_in_vec_init = "deny"
rc_mutex = "deny"
redundant_clone = "deny"
redundant_else = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
string_lit_as_bytes = "deny"
suspicious_operation_groupings = "deny"
todo = "deny"
trait_duplication_in_bounds = "deny"
tuple_array_conversions = "deny"
unimplemented = "deny"
unnecessary_self_imports = "deny"
unnecessary_wraps = "deny"
unused_async = "deny"
unused_trait_names = "deny"
unwrap_used = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
wildcard_imports = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "unwind"
strip = "symbols"
