[workspace]
members = [
  "apps/rsclash-desktop",
  "crates/rsclash-app",
  "crates/rsclash-config",
  "crates/rsclash-core",
  "crates/rsclash-domain",
  "crates/rsclash-mihomo",
  "crates/rsclash-platform",
  "crates/rsclash-service",
  "crates/rsclash-ui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
publish = false

[workspace.dependencies]
async-trait = "0.1.89"
eframe = { version = "0.35.0", default-features = false, features = [
  "default_fonts",
  "persistence",
  "wayland",
  "x11",
] }
egui = { version = "0.35.0", default-features = false }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
ksni = { version = "0.3.6", default-features = false, features = ["tokio"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std"] }
rustix = { version = "1.1.4", default-features = false, features = ["fs", "process", "std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.53.1", default-features = false }
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["handshake"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
  "env-filter",
  "fmt",
] }
urlencoding = "2.1.3"

rsclash-app = { path = "crates/rsclash-app" }
rsclash-config = { path = "crates/rsclash-config" }
rsclash-core = { path = "crates/rsclash-core" }
rsclash-domain = { path = "crates/rsclash-domain" }
rsclash-mihomo = { path = "crates/rsclash-mihomo" }
rsclash-platform = { path = "crates/rsclash-platform" }
rsclash-service = { path = "crates/rsclash-service" }
rsclash-ui = { path = "crates/rsclash-ui" }

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
non_ascii_idents = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
allow_attributes_without_reason = "deny"
async_yields_async = "deny"
await_holding_lock = "deny"
branches_sharing_code = "deny"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
cognitive_complexity = "deny"
collection_is_never_read = "deny"
copy_iterator = "deny"
dbg_macro = "deny"
equatable_if_let = "deny"
expect_used = "deny"
expl_impl_clone_on_copy = "deny"
future_not_send = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
large_const_arrays = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
missing_const_for_fn = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_pass_by_ref_mut = "deny"
needless_raw_string_hashes = "deny"
option_as_ref_cloned = "deny"
or_fun_call = "deny"
panic = "deny"
pathbuf_init_then_push = "deny"
print_stderr = "deny"
print_stdout = "deny"
rc_clone_in_vec_init = "deny"
rc_mutex = "deny"
redundant_clone = "deny"
redundant_else = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
string_lit_as_bytes = "deny"
suspicious_operation_groupings = "deny"
todo = "deny"
trait_duplication_in_bounds = "deny"
tuple_array_conversions = "deny"
unimplemented = "deny"
unnecessary_self_imports = "deny"
unnecessary_wraps = "deny"
unused_async = "deny"
unused_trait_names = "deny"
unwrap_used = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
wildcard_imports = "deny"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
