[package]
name = "rsclash-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "rsclash"
path = "src/main.rs"

[features]
default = ["tray"]
tray = ["dep:ksni"]

[dependencies]
eframe = { workspace = true, features = ["glow"] }
rsclash-app.workspace = true
rsclash-domain.workspace = true
rsclash-ui.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
futures-util.workspace = true
ksni = { workspace = true, optional = true }
rsclash-config.workspace = true
rsclash-core.workspace = true
rsclash-mihomo.workspace = true
rsclash-platform.workspace = true
rsclash-service.workspace = true
rustls.workspace = true
zbus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "net", "time"] }

[lints]
workspace = true
