[package]
name = "rsclash-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
rsclash-config.workspace = true
rsclash-core.workspace = true
rsclash-domain.workspace = true
rsclash-mihomo = { workspace = true, features = ["rustls-ring"] }
rsclash-platform.workspace = true
reqwest = { workspace = true, features = ["rustls-no-provider"] }
rustls.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
