[package]
name = "rsclash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
rsclash-domain.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
