[package]
name = "rsclash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
rsclash-domain.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
rsclash-mihomo.workspace = true
rustix.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }

[lints]
workspace = true
