[package]
name = "rsclash-mihomo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = []
rustls-ring = ["dep:rustls"]

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rustls = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "time"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
