[package]
name = "rsclash-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "rsclash-service"
path = "src/bin/service.rs"

[[bin]]
name = "rsclash-service-install"
path = "src/bin/install.rs"

[dependencies]
async-trait.workspace = true
rsclash-core.workspace = true
rsclash-domain.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
