[package]
name = "rsclash-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
egui.workspace = true
regex-lite.workspace = true
rsclash-app.workspace = true
rsclash-domain.workspace = true
serde_yaml_ng.workspace = true

[lints]
workspace = true
